--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -68,6 +68,10 @@ nav li a{
     color: #757575;
 }
 
+.text-center{
+    text-align: center;
+}
+
 .header{
     background-image: url("../images/developer.png"), url("../images/header_bg.png");
     background-repeat: no-repeat;
@@ -109,11 +113,15 @@ main{
     margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
 }
 
 .about-items{
@@ -123,4 +131,15 @@ main{
 
 .item-description{
     font-weight: 600;
+}
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
 }
